--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
     <div id="beginConnect4">
         <button id="playConnect4" onclick="setUpGame()">Begin</button>
+        <div id="nameInput">
+            <input id="player_1" placeholder="Player 1">
+            <input id="player_2" placeholder="Player 2">
+        </div>
     </div>
     
     <div id="connect4">
